2001-11-29  Phil Edwards  <pme@gcc.gnu.org>

	* docs/html/ext/howto.html:  Finish allocator notes (inst and 3.0).

2001-11-29  Benjamin Kosnik  <bkoz@redhat.com>

	* include/bits/locale_facets.tcc (num_get::do_get(long double)):
	Fix __traits_type typo.

2001-11-28  Paolo Carlini  <pcarlini@unitus.it>

	libstdc++/3655
	* include/bits/locale_facets.tcc (__pad): Correctly pad
	internal-adjusted hex numbers.
	* testsuite/27_io/ostream_inserter_arith.cc: Add testcase.

2001-11-28  Paolo Carlini <pcarlini@unitus.it>
	    Loren J. Rittle <ljrittle@acm.org>

	* include/bits/basic_string.h
	(basic_string::_Rep::__default_excess, _S_excess_slop):
	Unused, remove.
	* include/bits/basic_string.tcc: Remove dead code.
	* include/bits/c++config: Remove comment.

2001-11-28  Benjamin Kosnik  <bkoz@redhat.com>
	    Jakub Jelinek  <jakub@redhat.com>

	* config/locale/moneypunct_members_gnu.cc
	(moneypunct<wchar_t>::_M_initialize_moneypunct): Correctly cast
	for ia64, others.
	* config/locale/numpunct_members_gnu.cc
	(numpunct<wchar_t>::_M_initialize_numpunct): Same.

2001-11-27  Benjamin Kosnik  <bkoz@redhat.com>

	* include/bits/locale_facets.tcc: Formatting tweaks.

	* testsuite/23_containers/map_operators.cc: Don't xfail.
	* testsuite/23_containers/set_operators.cc: Same.
	* testsuite/backward/header_iterator_h.cc: Pass in -Wno-deprecated.
	* testsuite/backward/header_deque_h.cc: Same.

2001-11-27  Loren J. Rittle  <ljrittle@acm.org>
	    Paolo Carlini  <pcarlini@unitus.it>

	* include/bits/basic_string.tcc (basic_string::_Rep::_S_create):
	Enforce allocation size blocking policy to reduce
	fragmentation and enhance performance with common malloc
	implementations.

2001-11-27  Benjamin Kosnik  <bkoz@redhat.com>

	Numeric facets cleanup.
	* include/bits/locale_facets.h (__num_base::_S_atoms): Add, remove
	+ and - signs.
	(__num_base::_M_zero): Add
	(__num_base::_M_e): Add.
	(__num_base::_M_E): Add.	
	* include/bits/locale_facets.tcc (num_get::_M_extract): Remove.