@@ -481,7 +481,7 @@ namespace std
 	      streamsize __len = 1;
 	      if (__w > __len)
 		{
-		  __pad(__out, __out.fill(), __pads, &__c, __w, __len);
+		  __pad(__out, __out.fill(), __pads, &__c, __w, __len, false);
 		  __len = __w;
 		}
 	      __out.write(__pads, __len);
@@ -516,7 +516,7 @@ namespace std
 	      streamsize __len = 1;
 	      if (__w > __len)
 		{
-		  __pad(__out, __out.fill(), __pads, &__c, __w, __len);
+		  __pad(__out, __out.fill(), __pads, &__c, __w, __len, false);
 		  __len = __w;
 		}
 	      __out.write(__pads, __len);
@@ -549,7 +549,7 @@ namespace std
 	      streamsize __len = static_cast<streamsize>(_Traits::length(__s));
 	      if (__w > __len)
 		{
-		  __pad(__out, __out.fill(), __pads, __s, __w, __len);
+		  __pad(__out, __out.fill(), __pads, __s, __w, __len, false);
 		  __s = __pads;
 		  __len = __w;
 		}
@@ -595,7 +595,7 @@ namespace std
 	      
 	      if (__w > __len)
 		{
-		  __pad(__out, __out.fill(), __pads, __ws, __w, __len);
+		  __pad(__out, __out.fill(), __pads, __ws, __w, __len, false);
 		  __str = __pads;
 		  __len = __w;
 		}
@@ -630,7 +630,7 @@ namespace std
 	      streamsize __len = static_cast<streamsize>(_Traits::length(__s));
 	      if (__w > __len)
 		{
-		  __pad(__out, __out.fill(), __pads, __s, __w, __len);
+		  __pad(__out, __out.fill(), __pads, __s, __w, __len, false);
 		  __s = __pads;
 		  __len = __w;
 		}
@@ -668,7 +668,7 @@ namespace std
 #endif
 	  if (__w > __len)
 	    {
-	      __pad(__out, __out.fill(), __pads, __s, __w, __len);
+	      __pad(__out, __out.fill(), __pads, __s, __w, __len, false);
 	      __s = __pads;
 	      __len = __w;
 	    }
